--- a/app/src/main/res/layout/activity_customer_view_profile.xml
+++ b/app/src/main/res/layout/activity_customer_view_profile.xml
@@ -10,31 +10,32 @@ tools:context=".CustomerViewProfileActivity">
         android:id="@+id/fragCustViewProfile_btnBack"
         android:layout_width="63dp"
         android:layout_height="51dp"
-        android:backgroundTint="#F6F2F2"
+        android:layout_marginStart="10dp"
+        android:backgroundTint="#FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/fragCustViewProfile_tvCustID"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
+        app:layout_constraintVertical_bias="0.153"
         app:srcCompat="@drawable/back" />
 
     <TextView
-    android:id="@+id/fragCustViewProfile_tvCustID"
-    android:layout_width="140dp"
-    android:layout_height="44dp"
-    android:layout_marginTop="76dp"
-    android:background="@drawable/border"
-    android:gravity="center|start"
-    android:text="customerID"
-    android:textSize="20sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.114"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/fragCustViewProfile_tvCustID"
+        android:layout_width="140dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/border"
+        android:gravity="center|start"
+        android:text="customerID"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="parent" />
 
-<TextView
+    <TextView
     android:id="@+id/fragCustViewProfile_tvCustName"
     android:layout_width="211dp"
     android:layout_height="46dp"
@@ -48,21 +49,21 @@ tools:context=".CustomerViewProfileActivity">
     app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustID"
     app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustID" />
 
-<TextView
-    android:id="@+id/fragCustViewProfile_tvCustEmail"
-    android:layout_width="353dp"
-    android:layout_height="45dp"
-    android:layout_marginTop="44dp"
-    android:background="@drawable/border"
-    android:gravity="center|start"
-    android:text="email"
-    android:textSize="20sp"
-    app:layout_constraintEnd_toEndOf="@+id/fragCustViewProfile_tvCustName"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustName"
-    app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustName" />
+    <TextView
+        android:id="@+id/fragCustViewProfile_tvCustEmail"
+        android:layout_width="252dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/border"
+        android:gravity="center|start"
+        android:text="email"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/fragCustViewProfile_tvCustName"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustName"
+        app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustName" />
 
-<TextView
+    <TextView
     android:id="@+id/fragCustViewProfile_tvCustPassword"
     android:layout_width="243dp"
     android:layout_height="43dp"
@@ -75,5 +76,65 @@ tools:context=".CustomerViewProfileActivity">
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustEmail"
     app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustEmail" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F3C84A"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Profile"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="121dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="116dp"
+        android:gravity="center|start"
+        android:text="Customer ID"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="121dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="44dp"
+        android:gravity="center|start"
+        android:text="Customer Name"
+        app:layout_constraintEnd_toEndOf="@+id/textView6"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="59dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="44dp"
+        android:gravity="center|start"
+        android:text="E-mail"
+        app:layout_constraintEnd_toEndOf="@+id/textView8"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="72dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="44dp"
+        android:gravity="center|start"
+        android:text="Password"
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
